Fixed todo sections header gap on smaller screens.

--- a/styles/main.css
+++ b/styles/main.css
@@ -519,7 +519,7 @@ main {
   }
 
   .todo-sections {
-    top: -20px;
+    top: -21px;
   }
 }
 
